# znet-sink

./: .gitignore  AGENTS.md  CLAUDE.md  COMMIT_CONVENTION.md  LICENSE  Makefile  README.md  commitlint.config.js  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: release.yml
.husky/: commit-msg
docs/: current-project-issue-report.md  kernel-diff-implementation-report.md  kernel-integration-optimization-report.md
docs/gui/: README.md  app-config.md  capabilities.md  core.md  current-integration-status.md  interaction-modes.md  logs.md  nodes-manual-qa.md  proxy-config.md  (+3 more)
scripts/: lib-alias-loader.mjs  repair_updater_manifest.sh  test-nodes-probe-controller.mjs  test-nodes-probe-state.mjs  test-nodes-select-args.mjs  test-nodes-view-model.mjs  update_version.ps1  update_version.sh
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: uninstall.nsh
src-tauri/src/: config.rs  errors.rs  lib.rs
src-tauri/src/commands/: app_config.rs  capability.rs  core.rs  core_config.rs  core_process.rs  debug.rs  gui_core.rs  kernel_version.rs  logs.rs  mod.rs  proxy_config.rs  proxy_mode.rs  rule_set.rs  subscription.rs  system_proxy.rs
src-tauri/src/core/: ipc.rs
src-tauri/src/events/: emitter.rs
src-tauri/src/kernel/: adapter.rs  connection.rs  mod.rs  protocol.rs  transport.rs
src-tauri/src/kernel/zero/: adapter.rs  commands.rs  config.rs  events.rs  mod.rs  parsing.rs  queries.rs
src-tauri/src/kernel/zero/tests/: config_tests.rs  mod.rs  parsing_tests.rs  probe_tests.rs  snapshot_tests.rs
src-tauri/src/lifecycle/: mod.rs  phases.rs
src-tauri/src/models/: app_config.rs  capability.rs  core.rs  core_config.rs  core_process.rs  gui_core.rs  kernel_version.rs  logs.rs  mod.rs  proxy_config.rs  rule_set.rs  subscription.rs
src-tauri/src/services/: app_config.rs  app_config_store.rs  capability.rs  common.rs  control_plane.rs  core_config.rs  core_events.rs  core_process.rs  domain_store.rs  file_logger.rs  gui_connection.rs  gui_events.rs  gui_self_test.rs  kernel_manager.rs  local_proxy.rs  log_store.rs  logs.rs  mod.rs  network_probe.rs  probe.rs  proxy_config.rs  proxy_mode.rs  proxy_mode_tests.rs  rule_set.rs  subscription.rs  system_proxy.rs  system_proxy_guard.rs  traffic_sampler.rs  zero_adapter.rs
src-tauri/src/state/: app_state.rs
src-tauri/tests/: zero_config_tests.rs  zero_parsing_tests.rs  zero_snapshot_tests.rs
src-tauri/tests/core/: ipc.rs
src-tauri/tests/domain/: app_config.rs  capability.rs  core_config.rs  core_process.rs  mod.rs  store.rs  subscription.rs
(+75 files in other folders)
