[package]
name = "gui"
version = "0.0.8"
description = "ZNet Sink - 零域网络代理客户端"
authors = ["ZeroDenet <zerodenet.org>"]
license = "MPL-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["sync", "time"] }
sha2 = "0.10"
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Networking_WinInet",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Win32_System_Pipes",
  "Win32_System_Threading",
] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-updater = "2"
dirs = "6.0.0"
